NMCMS-655 - Add missing provincie Limburg. Updated some Java code for little performance.